<resources>
    <string name="app_name">authentication_app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="google_sign_in"> Continue with google</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Not a member yet?</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>