<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_900"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#CCFFFFFF"
        android:backgroundTint="@color/gray_900"
        android:translationZ="90dp"
        android:id="@+id/lotielayer">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lottie_url="https://assets9.lottiefiles.com/packages/lf20_pMMQPe.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/auth_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/google_sign_in"
                android:textSize="18sp"
                android:background="@color/gray_900"
                />

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="20dp"
                android:theme="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:id="@+id/email_sign_up"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="20dp"
                android:theme="@style/TextInputLayoutStyle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:id="@+id/password_sign_up"
                    app:boxStrokeColor="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="20dp"
                android:theme="@style/TextInputLayoutStyle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:id="@+id/confirm_password_sign_up"
                    app:boxStrokeColor="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/brand_color"
                android:text="@string/login"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>